--- a/vertx/src/main/resources/index.html
+++ b/vertx/src/main/resources/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-  <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="/indes.js"></script>
 </head>
 <body>
 <p th:text="${age}"></p>
