--- a/vertx/src/main/resources/index.html
+++ b/vertx/src/main/resources/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-  <script src="/indes.js"></script>
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=1.0">
+  <script src="/static/indes.js"></script>
 </head>
 <body>
 <p th:text="${age}"></p>
@@ -12,5 +12,6 @@
 <a th:href="${url}">aaa</a>
 </body>
 <script type="text/javascript" >
+  index();
 </script>
 </html>
